[package]
name = "sps2-repository"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-index = { path = "../index" }
sps2-hash = { path = "../hash" }
sps2-signing = { path = "../signing" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
regex = "1.11.2"
thiserror = { workspace = true }
async-trait = "0.1.80"
