[package]
name = "sps2-repository"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-index = { path = "../index" }
sps2-hash = { path = "../hash" }
sps2-net = { path = "../net" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
regex = "1.12.2"
thiserror = { workspace = true }
async-trait = "0.1.89"
chrono = { workspace = true }
base64 = "0.22.1"
hex = "0.4.3"
