[package]
name = "spsv2-resolver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spsv2-errors = { path = "../errors" }
spsv2-types = { path = "../types" }
spsv2-index = { path = "../index" }
spsv2-manifest = { path = "../manifest" }
serde = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
scopeguard = "1.2"

[dev-dependencies]
tempfile = { workspace = true }