[package]
name = "sps2-resolver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-events = { path = "../events" }
sps2-types = { path = "../types" }
sps2-index = { path = "../index" }
sps2-platform = { path = "../platform" }
serde = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
uuid = { version = "1.17.0", features = ["v4"] }
scopeguard = "1.2.0"

[dev-dependencies]
tempfile = { workspace = true }
