[package]
name = "sps2-resources"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true }