[package]
name = "sps2-root"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
tokio = { workspace = true, features = ["fs", "process"] }
libc = "0.2.174"

[dev-dependencies]
tempfile = { workspace = true }
