[package]
name = "sps2-signing"
version = "0.1.0"
edition = "2021"

[lib]
name = "sps2_signing"
path = "src/lib.rs"

[dependencies]
minisign-verify = "0.2.4"
minisign = "0.7.9"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
sps2-errors = { path = "../errors" }
hex = "0.4.3"
base64 = "0.22.1"
