[package]
name = "sps2-state"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-events = { path = "../events" }
sps2-hash = { path = "../hash" }
sps2-resolver = { path = "../resolver" }
sps2-store = { path = "../store" }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
sps2-platform = { path = "../platform" }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["runtime-queries"]
runtime-queries = []
