[package]
name = "sps2-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-hash = { path = "../hash" }
sps2-root = { path = "../root" }
sps2-manifest = { path = "../manifest" }
sps2-events = { path = "../events" }
sps2-resolver = { path = "../resolver" }
tokio = { workspace = true, features = ["fs", "io-util"] }
tar = "0.4.44"
async-compression = { version = "0.4.23", features = ["tokio", "zstd"] }
tokio-util = { version = "0.7.15", features = ["compat", "io", "io-util"] }
tempfile = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
