[package]
name = "sps2-store"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-hash = { path = "../hash" }
sps2-platform = { path = "../platform" }
sps2-events = { path = "../events" }
sps2-resolver = { path = "../resolver" }
tokio = { workspace = true, features = ["fs", "io-util"] }
tar = "0.4.44"
async-compression = { version = "0.4.33", features = ["tokio", "zstd"] }
tokio-util = { version = "0.7.17", features = ["compat", "io", "io-util"] }
tempfile = { workspace = true }
uuid = { version = "1.18.1", features = ["v4"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
