[package]
name = "sps2-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
semver = { workspace = true }
serde = { workspace = true }
serde_yml = "0.0.12"
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
